--- a/escom-bpm-web/src/main/webapp/view/processes/elements/procedure-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/elements/procedure-card.xhtml
@@ -4,7 +4,7 @@
                  template="/view/templ/templ-dlg.xhtml"
                  xmlns:f="http://xmlns.jcp.org/jsf/core">
 
-    <ui:param name="_bean" value="#{conditionCardBean}"/>
+    <ui:param name="_bean" value="#{procedureCardBean}"/>
     
     <ui:define name="menuActions" >
     </ui:define>
@@ -13,20 +13,19 @@
     </ui:define>    
     
     <ui:define name="centerFormContent">       
-        <p:tabView orientation="left" id="mainTabView" styleClass="ui-grid-col-12 col-padding" rendered="#{conditionCardBean.editedItem != null}" >
-            <p:tab title="#{bundle.Condition}"  >
+        <p:tabView orientation="left" id="mainTabView" styleClass="ui-grid-col-12 col-padding" rendered="#{procedureCardBean.editedItem != null}" >
+            <p:tab title="#{bundle.Procedure}"  >
                 <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 without-spaces" >
                     
                     <p:commandButton value="#{bundle.Save}" update="mainFRM"
-                                     actionListener="#{conditionCardBean.onCloseCard('save')}" style="float: right;">
+                                     actionListener="#{procedureCardBean.onCloseCard('save')}" 
+                                     onclick="sendFormSize();"
+                                     style="float: right;">
                         <f:param name="isRequired" value="true"/>
                     </p:commandButton>
                 </p:panelGrid>
-            </p:tab>
-            
-            <p:tab title="#{bundle.Settings}" >
-            
-            </p:tab>
+            </p:tab>            
+
         </p:tabView>
     </ui:define>
 </ui:composition>
