--- a/escom-bpm-web/src/main/webapp/view/templ/templ-frm.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-frm.xhtml
@@ -1,14 +1,12 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui"
-                template="/view/templ/templ.xhtml"
-                xmlns:h="http://xmlns.jcp.org/jsf/html">
+                template="/view/templ/templ.xhtml">
 
     <ui:param name="_canClose" value="#{_canClose == null ? true : _canClose}"/> 
     <ui:param name="_isShowHelp" value="#{_isShowHelp == null ? true : _isShowHelp}" />
     
-    <ui:define name="body">
-        <h:outputScript library="js" name="confirm-close-window.js"/>
+    <ui:define name="body">       
         
         #{_bean.onBeforeOpenCard()}
                 
