--- a/escom-bpm-web/src/main/webapp/view/templ/templ.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ.xhtml
@@ -26,6 +26,7 @@
 
         <link rel="shortcut icon" href="#{resource['icon/done.png']}" type="image/png"/>
         <h:outputStylesheet library="css" name="em_style1.css"/>
+        <h:outputScript library="js" name="confirm-close-window.js"/>
         <f:view locale="#{sessionBean.locale}"></f:view>
     </h:head>
 
