--- a/escom-bpm-web/src/main/webapp/view/index.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/index.xhtml
@@ -19,9 +19,7 @@
 
     <ui:define name="body">
         <!--h:outputScript library="js" name="ITHitWebDAVClient.js" /-->
-        <script>
-            var isClose = 0;
-        </script>
+        <h:outputScript library="js" name="confirm-close-window.js"/>
         <p:importConstants type="com.maxfill.dictionary.DictFilters" var="DictFilters" />
         <p:importConstants type="com.maxfill.dictionary.DictModules" var="DictModules" />   
         <p:importConstants type="com.maxfill.dictionary.DictFrmName" var="DictFrmName" />        
